--- a/lib/chapter4.tex
+++ b/lib/chapter4.tex
@@ -99,7 +99,11 @@ Antes de realizar el modelado del algoritmo de clasificación, se va a querer vi
     \item \textbf{Visualización:} Se van a visualizar los clusters obtenidos en el paso anterior en función de si el paciente ha necesitado OAF de esta forma se pretenderá ver si se aíslan de alguna forma las dos categorías de pacientes previamente establecidas. 
     \item \textbf{Caracterización de Clusters:} 
     Se llevará a cabo la caracterización de los clusters, tomando en consideración las diversas variables descriptivas de cada paciente (edad, género, peso, OAF, ...). Esto se realizará mediante la construcción de un modelo de clasificación discreta, se buscará entender cómo las distintas variables descriptivas influyen en la asignación de etiquetas a los clusters. Este análisis permitirá identificar las variables más influyentes en la distinción de pacientes pertenecientes a los diferentes clusters. Lo ideal en este caso sería observar como en un cluster la variable OAF es la que más influye en la clasificación de los pacientes, ya que esto significaría que los clusters se han formado en función de si el paciente ha necesitado OAF o no. Si esto es así se podría concluir que los clusters obtenidos partiendo de los datos obtenidos de las \textit{Series Temporales} y sus respectivas transformaciones, son capaces de diferenciar a los pacientes que han necesitado OAF de los que no. Respecto a este punto y en último lugar se va a mostrar como se distribuye la importancia de los datos utilizados en función de las etiquetas utilizadas para realizar el \textit{clustering}. En este apartado si los \textit{clusters} generan una muestra de pacientes desbalanceada por grupos se utilizará el método SMOTE para balancearla, esta técnica se explica en la Sección~\ref{sec:oversampling}.
-    \item \textbf{Modelado:} Si el anterior paso resulta exitoso será inmediato generar un modelo que permita la clasificación de pacientes que van a necesitar OAF y los que no. El modelo de clasificación será un modelo de clasificación binaria, ya que la variable de salida es una variable categórica con dos categorías: \texttt{paciente que va a necesitar OAF} y \texttt{paciente que no va a necesitar OAF}. 
+    \item \textbf{Modelado:} Si el anterior paso resulta exitoso será inmediato generar un modelo que permita la clasificación de pacientes que van a necesitar OAF y los que no. El modelo de clasificación será un modelo de clasificación binaria, ya que la variable de salida es una variable categórica con dos categorías: 
+    \begin{enumerate}
+        \item \texttt{Paciente que Va a Necesitar OAF} 
+        \item \texttt{Paciente que NO Va a Necesitar OAF}. 
+    \end{enumerate}
 \end{enumerate}
 
 Se van a utilizar los datos de las primeras $8$ horas de monitorización de los pacientes, se excluirán aquellos pacientes que ya han sido catalogados como pacientes que han necesitado OAF y se buscará hacer un modelo final para predecir si el paciente después de las 8 primeras horas va a necesitar OAF o no. El Estudio 2 se ha reducido a este planteamiento debido a la limitación de los datos de pacientes que han necesitado OAF, como se ha explicado anteriormente.
