--- a/lib/chapter6.tex
+++ b/lib/chapter6.tex
@@ -6,11 +6,11 @@ Una vez finalizado el trabajo de investigación realizado se van a abordar las c
 
 En primer lugar se ha realizado un estudio de los sistemas de monitorización de planta pediátrica de pacientes con cuadro bronquiolitis, se ha concluido que dicha monitorización es una herramienta eficaz para la detección de pacientes de riesgo y que permite la toma de decisiones clínicas de forma temprana a la hora de suministrar OAF.
 
-Se ha evaluado y contrastado si se puede afirmar si a los pacientes a los que se les ha aplicado OAF presentan una saturación de oxígeno mayor que los pacientes sin OAF, y si presentan una frecuencia cardíaca mayor. Se ha concluido que de manera general en el espectro de valores de monitorización horarios esto no se puede afirmar de manera significativa, solamente en algunos momentos puntuales se ha observado que los pacientes con OAF presentan una saturación de oxígeno y frecuencia cardíaca mayor que los pacientes sin OAF, pero no se puede extrapolar de manera general a todo el rango horario. 
+Se ha evaluado y contrastado si se puede afirmar si a los pacientes a los que se les ha aplicado OAF presentan una saturación de oxígeno mayor que los pacientes sin OAF, y si presentan una frecuencia cardíaca mayor. Se ha concluido que de manera general en el espectro de valores de monitorización horarios esto no se puede afirmar de manera significativa, solamente en algunos momentos puntuales se ha observado que los pacientes con OAF presentan una saturación de oxígeno y frecuencia cardíaca mayor que los pacientes sin OAF, pero no se puede extrapolar de manera general a todo el rango horario. Se ha evaluado si esta situación podría estar sucediendo al suponer la variabilidad igual entre grupos y no es así, los resultados son muy parecidos. 
 
 Se ha tratado ver si es posible agrupar a los pacientes obtenidos en el estudio y aislar a aquellos que han sufrido DETERIORO. Se ha concluido que con los datos utilizados esto no es posible y que el DETERIORO es un evento muy complejo que está influenciado por muchos factores, no solo por los datos de monitorización. A la hora de evaluar los diferentes clusters obtenidos ninguno se ha podido asociar a un grupo de pacientes con DETERIORO.
 
-Por otro lado, se ha observado como el hecho de transformar la Frecuencia Cardíaca por cuantiles y escalarla ayuda a reducir el hecho de separar los pacientes atendiendo a la Edad. Por otro lado a la hora de agrupar los pacientes en función de las transformaciones hechas de las series temporales (FAS, FCC, Peridiograma) y los valores brutos de monitorización (Raw Data), se ha observado que de manera general las escalas utilizadas a la hora del ingreso del paciente pediátrico {SCORE\_WOOD\_DOWNES\_INGRESO y SCORE\_CRUCES\_INGRESO) son un buen indicador de la evolución de las Series Temporales de los datos de monitorización, no tanto del estado del paciente. 
+Por otro lado, se ha observado como el hecho de transformar la Frecuencia Cardíaca por cuantiles y escalarla, ayuda a reducir el hecho de separar los pacientes atendiendo a la edad. Por otro lado a la hora de agrupar los pacientes en función de las transformaciones hechas de las series temporales (FAS, FCC, Peridiograma) y los valores brutos de monitorización (Raw Data), se ha observado que de manera general las escalas utilizadas a la hora del ingreso del paciente pediátrico {SCORE\_WOOD\_DOWNES\_INGRESO y SCORE\_CRUCES\_INGRESO) son un buen indicador de la evolución de las Series Temporales de los datos de monitorización, no tanto del estado del paciente. 
 
 Se ha concluido que el uso de la técnica de SMOTE es una buena herramienta para el tratamiento de desbalanceo de clases, y que es una herramienta de ayuda a la hora de clasificar los pacientes en tanto en función de los diferentes clusters obtenidos como de la etiqueta DETERIORO.
 
@@ -18,25 +18,21 @@ En último lugar se ha concluido que el uso de la técnica de \textit{Random For
 
 El modelo programado que evalúa al paciente pediátrico pasadas las 8 primeras horas es robusto y es capaz de clasificar si el paciente va a necesitar OAF o no con una precisión validada en un conjunto de datos de testeo del 96\% y con un OOB del 4.35\%. Se justifica el uso de este modelo frente a un modelo de regresión logística dado el mejor resultado obtenido a la hora de la clasificación de los pacientes.
 
-Las escalas de valoración al ingreso así como la decisión de suministrar Suero, hacer una Radiografía y tomar una analítica son las variables más importantes a la hora de clasificar al paciente. Es decir el modelo identifica que los pacientes que más riesgo tienen son aquellos que al ingreso los profesionales de la salud hacen una previa valoración de riesgo y deciden suministrar Suero, hacer una Radiografía y tomar una analítica. En el presente estudio a la hora de clasificar los pacientes no se ha detectado que los valores de monitorización sean los más importantes a la hora de clasificar al paciente, si no que son las decisiones tomadas por los profesionales de la salud a la hora del ingreso del paciente son las que más influyen en la clasificación del paciente.
+Las escalas de valoración al ingreso así como la decisión de suministrar suero, hacer una radiografía y tomar una analítica son las variables más importantes a la hora de clasificar al paciente. Es decir el modelo identifica que los pacientes que más riesgo tienen son aquellos que al ingreso los profesionales de la salud hacen una previa valoración de riesgo y deciden suministrar suero, hacer una radiografía y tomar una analítica. En el presente estudio a la hora de clasificar los pacientes no se ha detectado que los valores de monitorización sean los más importantes a la hora de clasificar al paciente, si no que son las decisiones tomadas por los profesionales de la salud a la hora del ingreso del paciente son las que más influyen en la clasificación del paciente.
 
-Un aspecto interesante dentro de la presencia en la importancia dentro del modelo de clasificación, de una variable que no sea descriptiva, es la presencia de valores de la función de correlación cruzada entre la posición 54 y 68 entre los valores de series temporales de monitorización. Esto puede hacer referencia a que en una hora (60 minutos, 60 posiciones) es posible correlacionar la Frecuencia Cardíaca con la Saturación de Oxígeno de tal manera que indiquen la posible evolución del paciente en las siguientes horas. A su vez esta relación se sigue manteniendo cuando se pretende clasificar en función de los clusters generados en la Figura~\ref{fig:ccf_imp}. Esto puede indicar que los valores de Frecuencia Cardíaca con respecto a la saturación de oxígeno desfasados 1h son un buen indicador de la evolución y las características de los pacientes.
+Un aspecto interesante dentro de la presencia en la importancia dentro del modelo de clasificación, de una variable que no sea descriptiva, es la presencia de FCC entre la posición 54 y 68 entre los valores de series temporales de monitorización. Esto puede hacer referencia a que en una hora (60 minutos, 60 posiciones) es posible correlacionar la \textit{Frecuencia Cardíaca} con la \textit{Saturación de Oxígeno} de tal manera que indiquen la posible evolución del paciente en las siguientes horas. A su vez esta relación se sigue manteniendo cuando se pretende clasificar en función de los clusters generados en la Figura~\ref{fig:ccf_imp}. Esto puede indicar que los valores de \textit{Frecuencia Cardíaca} con respecto a la \textit{Saturación de Oxígeno} desfasados 1h son un buen indicador de la evolución y las características de los pacientes.
 
-No se descarta que la monitorización sea un método eficaz pues a pesar de que la importancia de las variables se agrupa entorno a las variables descriptivas la clasificación y el resultado de un modelo robusto de predicción se realiza también en función de los valores de monitorización.  
+No se descarta que la monitorización sea un método eficaz pues a pesar de que la importancia de las variables se agrupa entorno a las variables descriptivas la clasificación, el resultado de un modelo robusto de predicción se realiza también en función de los valores de monitorización.
 
-Esto indica que el modelo es capaz de identificar que los valores de monitorización de los pacientes que necesitan OAF son más estables que los de los pacientes que no necesitan OAF.
-
-
-
-\subsection{Líneas Futuras}\label{sec:líneas-futuras}
+\subsection{Líneas Futuras}\label{sec:lineas-futuras}
 
 A continuación se van a exponer las líneas futuras que se pueden abordar a partir de este trabajo de investigación.
 
 En primer lugar sería interesante poder ampliar el estudio a un mayor número de pacientes, para poder tener una mayor representatividad de los mismos y poder realizar un estudio más robusto así poder validar si los pacientes generados por SMOTE son representativos de la población y son similares a aquellos pacientes que han sufrido DETERIORO en nuevas recopilaciones de datos.
 
-El poder aumentar la muestra de los pacientes se podría marcar la diferencia entre pacientes que acaban en la UCIP y aquellos que necesitan OAF, planteando el estudio de manera independiente y no juntando ambas variables en el concepto de DETERIORO. El poder aumentar el tamaño de la muestra permitiría valorar al paciente no solo a las 8 primeras horas después del ingreso, si no en el mismo ingreso, a las 8h, a las 16h y a las 24h y poder ver si el modelo es capaz de predecir si el paciente va a necesitar OAF en los diferentes intervalos horarios.
+El poder aumentar la muestra de los pacientes se podría marcar la diferencia entre pacientes que acaban en la UCIP y aquellos que necesitan OAF, planteando el estudio de manera independiente y no juntando ambas variables en el concepto de DETERIORO. El hecho de poder aumentar el tamaño de la muestra permitiría valorar al paciente no solo a las 8 primeras horas después del ingreso, si no en el mismo ingreso, a las 8h, a las 16h y a las 24h y poder ver si el modelo es capaz de predecir si el paciente va a necesitar OAF en los diferentes intervalos horarios.
 
-Sería a su vez interesante poder ampliar el estudio a un mayor número de variables de monitorización, como por ejemplo la presión arterial, la temperatura, la frecuencia respiratoria, etc y poder hacer un estudio entre ellas para ver cual es la que va más de la mano del DETERIORO.
+Sería a su vez interesante poder ampliar el estudio a un mayor número de variables de monitorización, como por ejemplo la presión arterial, la temperatura, la frecuencia respiratoria, etc y poder hacer un estudio entre ellas para ver cuál es la que va más de la mano del DETERIORO.
 
 En el presente trabajo se han generado muchísimos datos fruto de resultados obtenidos y por ello sería interesante plantear un estudio de todos estos datos generados para poder sacar conclusiones más robustas. 
 
