--- a/lib/chapter7.tex
+++ b/lib/chapter7.tex
@@ -145,7 +145,7 @@ En la Figura~\ref{fig:gantt} se muestra el diagrama de Gantt con las tareas a re
 
     \end{ganttchart}%
     }
-    \caption{Diagrama de Gantt para el Presente Trabajo de Fin de Máster con Flechas de Dependencia y Grupos}
+    \caption{Diagrama de Gantt para el Presente TFM con Flechas de Dependencia y Grupos}
     \label{fig:gantt}
     \end{figure}
 
