--- a/lib/chapter8.tex
+++ b/lib/chapter8.tex
@@ -23,12 +23,12 @@ En relación al impacto ético de este proyecto se asegura que los pacientes y s
 
 \subsection{Contribución a los Objetivos de Desarrollo Sostenible y Agenda 2030}
 
-La contribución a los Objetivos de Desarrollo Sostenible (ODS) y la Agenda 2030 es un aspecto fundamental que debe ser considerado en cualquier proyecto, incluido uno que aborde la predicción de suministro de Oxigenoterapia de Alto Flujo (OAF) en pacientes pediátricos. A continuación, se describen algunas formas en que este proyecto podría contribuir a los ODS y la Agenda 2030:
+La contribución a los Objetivos de Desarrollo Sostenible (ODS) y la Agenda 2030 es un aspecto fundamental que debe ser considerado en cualquier proyecto, incluido uno que aborde la predicción de suministro de OAF en pacientes pediátricos. A continuación, se describen algunas formas en que este proyecto podría contribuir a los ODS y la Agenda 2030:
 
 \begin{itemize}
-    \item \textsc{ODS 3:} Salud y bienestar. Este proyecto contribuye a este objetivo ya que se pretende mejorar la atención médica de los pacientes pediátricos con cuadro bronquiolitis mejorando su salud y bienestar
-    \item \textsc{ODS 9:} Industria, innovación e infraestructura. Este proyecto contribuye a este objetivo ya que parte de la metodología utilizada para la realización de este proyecto se basa en la utilización de técnicas de aprendizaje automático, que es una de las tecnologías más innovadoras de la actualidad.
-    \item \textsc{ODS 17:} Alianzas para lograr los objetivos. Este proyecto contribuye a este objetivo ya que se ha realizado en colaboración con el Hospital Universitario de Gregorio Marañón y la Universidad Politécnica de Madrid.
-    \item \textsc{ODS 16:} Paz, justicia e instituciones sólidas. Este proyecto contribuye a este objetivo ya que a la hora de la recopilación y el uso de datos de pacientes se siguen un estándares éticos y y se pretende asegurar el respeto de los derechos de los pacientes.
+    \item \textsc{ODS 3: Salud y bienestar.} Este proyecto contribuye a este objetivo ya que se pretende mejorar la atención médica de los pacientes pediátricos con cuadro bronquiolitis mejorando su salud y bienestar
+    \item \textsc{ODS 9: Industria, innovación e infraestructura.} Este proyecto contribuye a este objetivo ya que parte de la metodología utilizada para la realización de este proyecto se basa en la utilización de técnicas de aprendizaje automático, que es una de las tecnologías más innovadoras de la actualidad.
+    \item \textsc{ODS 17: Alianzas para lograr los objetivos.} Este proyecto contribuye a este objetivo ya que se ha realizado en colaboración con el Hospital Universitario de Gregorio Marañón y la Universidad Politécnica de Madrid.
+    \item \textsc{ODS 16: Paz, justicia e instituciones sólidas.} Este proyecto contribuye a este objetivo ya que a la hora de la recopilación y el uso de datos de pacientes se siguen un estándares éticos y y se pretende asegurar el respeto de los derechos de los pacientes.
 \end{itemize}
 
