--- a/lib/chapter5.tex
+++ b/lib/chapter5.tex
@@ -171,9 +171,9 @@ En esta sección de resultados, presentaremos los hallazgos obtenidos en el \tex
     \item Puntuación de Silhouette de los clústeres obtenidos según la mejor agrupación determinada.
     \item Dendrograma de los clústeres obtenidos según los pacientes que han experimentado OAF, junto con la tabla de contingencia para dos grupos de pacientes.
     \item Clasificación mediante Random Forest de los clústeres según las variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final}, así como la Importancia de las cinco primeras variables para dos grupos de pacientes.
-    \item Clasificación Discriminante mediante Random Forest de los clústeres en función de los datos utilizados para generar los mismos clústeres (Raw Data, FAS, Periodograma y FCC). Se mostrará la importancia para identificar qué datos contribuyen más en la clasificación entre k = 2 clústers generados.
+    \item Clasificación Discriminate mediante Random Forest de los clústeres en función de los datos utilizados para generar los mismos clústeres (Raw Data, FAS, Periodograma y FCC). Se mostrará la importancia para identificar qué datos contribuyen más en la clasificación entre k = 2 clusters generados.
     \item Distribución de la importancia del resultado del modelo del apartado anterior de los valores empleados (Raw Data, FAS, Periodograma y FCC) 
-    \item Cálculo de las medias de todos los valores empleados (Raw Data, FAS, Periodograma y FCC) entre todos los pacientes, y diagrama de sus valores entre k = 2 clústers generados.
+    \item Cálculo de las medias de todos los valores empleados (Raw Data, FAS, Periodograma y FCC) entre todos los pacientes, y diagrama de sus valores entre k = 2 clusters generados.
 \end{enumerate}
 
 Se estudiará la mejor forma de distribuir a los pacientes entre clusters pero se tendrá en cuenta que al pretender dividir la muestra de pacientes entre aquellos a los que se les suministra  OAF y los que no, se forzará para su clasificación y visualización a 2 clusters.
